# safer-file-handles-examples

./: Example.hs  LICENSE  safe-files-examples.cabal  safer-file-handles-examples.cabal
