name:          safer-file-handles-examples
version:       0.2
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2010 Bas van Dijk, Oleg Kiselyov and Chung-chieh Shan
author:        Bas van Dijk, Oleg Kiselyov and Chung-chieh Shan
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
stability:     experimental
category:      System, Monadic Regions
synopsis:      Examples for the safer-file-handles package
description:   This package provides examples for the @safer-file-handles@ package.
               .
               Among other things it ports the examples from Oleg Kiselyov and
               Chung-chieh Shan. See: @SafeHandlesTest.hs@ from:
               <http://okmij.org/ftp/Haskell/regions.html#light-weight>

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/safer-file-handles-examples.git

Executable example
  Main-is: Example.hs
  build-depends: base                >= 4     && < 4.4
               , transformers        >= 0.2   && < 0.3
               , monad-control       >= 0.2   && < 0.3
               , regions             >= 0.9   && < 0.10
               , safer-file-handles  >= 0.10  && < 0.11
               , pathtype            >= 0.0.1 && < 0.6
