name:          safer-file-handles-examples
version:       0.2
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2010 Bas van Dijk, Oleg Kiselyov and Chung-chieh Shan
author:        Bas van Dijk, Oleg Kiselyov and Chung-chieh Shan
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
bug-reports:   https://github.com/basvandijk/safer-file-handles-examples/issues
stability:     experimental
category:      System, Monadic Regions
synopsis:      Examples for the safer-file-handles package
description:   This package provides examples for the @safer-file-handles@ package.
               .
               Among other things it ports the examples from Oleg Kiselyov and
               Chung-chieh Shan. See: @SafeHandlesTest.hs@ from:
               <http://okmij.org/ftp/Haskell/regions.html#light-weight>

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/safer-file-handles-examples.git

Executable example
  Main-is: Example.hs
  build-depends: base                >= 4     && < 4.5
               , transformers        >= 0.2   && < 0.3
               , regions             >= 0.11  && < 0.12
               , safer-file-handles  >= 0.11  && < 0.12
               , pathtype            >= 0.0.1 && < 0.6
